[gd_scene load_steps=9 format=2]

[ext_resource path="res://objektid/Question.gd" type="Script" id=1]
[ext_resource path="res://assets/Background/küsimuste_popup_puhas.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/taust_FINAL (1).png" type="Texture" id=3]
[ext_resource path="res://assets/Xerox_Serif_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/helid/taustamuusika2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Xerox_Serif_dynamicfon_Title.tres" type="DynamicFont" id=6]
[ext_resource path="res://PauseScene.tscn" type="PackedScene" id=7]

[sub_resource type="ButtonGroup" id=1]

[node name="Question_Box" type="Node2D"]
modulate = Color( 0.0470588, 0.768627, 0.933333, 1 )
script = ExtResource( 1 )

[node name="Sprite3" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Sprite3"]
anchor_left = 0.499675
anchor_top = 0.5
anchor_right = 0.499675
anchor_bottom = 0.5
margin_left = -698.22
margin_top = -377.299
margin_right = 693.781
margin_bottom = 398.701
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="."]
modulate = Color( 0.0117647, 0.12549, 0.411765, 1 )
self_modulate = Color( 0.0156863, 0.137255, 0.431373, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 578.0
margin_top = 336.824
margin_right = 1345.0
margin_bottom = 413.824
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Küsimus mis tuleb automaatselt"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioEffects" type="Node" parent="."]

[node name="Küsimuse_taust" type="AudioStreamPlayer2D" parent="AudioEffects"]
stream = ExtResource( 5 )
autoplay = true

[node name="VASTA" type="Button" parent="."]
modulate = Color( 0.996078, 0.968627, 0.968627, 1 )
self_modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
margin_left = 955.0
margin_top = 710.0
margin_right = 1108.0
margin_bottom = 763.0
size_flags_horizontal = 5
text = "VASTA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vastuste_container" type="HBoxContainer" parent="."]
margin_left = 633.012
margin_top = 433.234
margin_right = 1418.01
margin_bottom = 689.234
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioBtn_conteiner" type="VBoxContainer" parent="Vastuste_container"]
margin_right = 784.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vastus1" type="CheckBox" parent="Vastuste_container/RadioBtn_conteiner"]
margin_right = 784.0
margin_bottom = 82.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0117647, 0.12549, 0.411765, 1 )
group = SubResource( 1 )
text = "Vastus 1"
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastus2" type="CheckBox" parent="Vastuste_container/RadioBtn_conteiner"]
margin_top = 86.0
margin_right = 784.0
margin_bottom = 168.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0117647, 0.12549, 0.411765, 1 )
group = SubResource( 1 )
text = "Vastus 2"
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastus3" type="CheckBox" parent="Vastuste_container/RadioBtn_conteiner"]
margin_top = 172.0
margin_right = 784.0
margin_bottom = 256.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.0117647, 0.12549, 0.411765, 1 )
group = SubResource( 1 )
text = "Vastus3"
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PauseScene" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="pressed" from="VASTA" to="." method="_on_VASTA_pressed"]
[connection signal="pressed" from="Vastuste_container/RadioBtn_conteiner/Vastus1" to="." method="_on_Vastus1_pressed"]
[connection signal="pressed" from="Vastuste_container/RadioBtn_conteiner/Vastus2" to="." method="_on_Vastus2_pressed"]
[connection signal="pressed" from="Vastuste_container/RadioBtn_conteiner/Vastus3" to="." method="_on_Vastus3_pressed"]
